# ArduCAM_RP2040_C

./: ArduCAM_X_W55RP20_test.uf2  Setting.ini
ArduCAM/: ArduCAM.c  ArduCAM.h  CMakeLists.txt
W55RP20_ArduCAM_Example/: CMakeLists.txt  W55RP20_ArduCAM_Example.c
W55RP20_ArduCAM_Example/ArduCAM/: ArduCAM.h  ov2640_regs.c  ov2640_regs.h
examples/Arducam_MINI_2MP_Plus_Videostreaming/: Arducam_MINI_2MP_Plus_Videostreaming.c  CMakeLists.txt
